[project]
name = "crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.12",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.3.31",
    "mcp[cli]>=1.6.0",
    "smolagents[litellm,mcp]>=1.13.0",
    "web3>=7.10.0",
    "yfinance>=0.2.55",
]
